--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
 
 <body>
   <div class="navbar-body">
+    <h1>BookBeater</h1>
+    <div class="jcc alc f-row add-dashboard">
+      <div class="plus-sign">
+        <i class="fas fa-plus-circle"></i>
+      </div>
+      <textarea placeholder="Add a new dashboard"></textarea>
+    </div>
+    <ul class="mb-5">
+      <a href="">
+        <li class="active-dashboard"><span><i class="fas fa-brain"></i></span>Psychology</li>
+      </a>
+      <a href="">
+        <li class="inactive-dashboard"><span><i class="far fa-lightbulb"></i></span>Philosophy</li>
+      </a>
+      <a href="">
+        <li class="inactive-dashboard"><span><i class="fas fa-laptop"></i></span>Computers</li>
+      </a>
+      <a href="">
+        <li class="inactive-dashboard"><span><i class="fas fa-user-tie"></i></span>Business</li>
+      </a>
+    </ul>
+    <ul class="mb-5">
+      <a href="">
+        <li class="inactive-dashboard"><span><i class="fas fa-cog"></i></span> Settings</li>
+      </a>
+    </ul>
+    <button><span>Log out</span></button>
   </div>
       <div class="container-fluid p-0 m-0 dash-cont">
         <div class="navigator">
