--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="./js/scripts-vendor.min.js"></script>
   <script src="./js/scripts.min.js"></script>
   <meta charset="utf-8">
@@ -13,6 +14,47 @@
 </head>
 
 <body>
+  <div class="pop-up-window">
+    <div class="pop-up-box">
+      <div class="close-window-box">
+        <button class="close-window"><i class="fas fa-times-circle"></i></button>
+      </div>
+      <div class="book-info">
+        <img src="./images/book.jpg" alt="">
+        <div class="book-info-text">
+          <h1 class="booktitle">Influence: The Psychology of Pursuasion</h1>
+          <p>By Dr Cialdini</p>
+          <p>1982</p>
+          <button class="add-button">Add to bookshelf + </button>
+        </div>
+      </div>
+      <div class="notes-sec">
+        <h3>Your Notes<span class="ml-3"><i class="fas fa-sticky-note"></i></span></h3>
+        <div class="notes-grid">
+          <div class="note-item">
+            <h2>Random Rambilngs of a mad man</h2>
+            <p>Edited 22/07/2021</p>
+          </div>
+          <div class="note-item">
+            <h2>Random Rambilngs</h2>
+            <p>Edited 22/07/2021</p>
+          </div>
+          <div class="note-item">
+            <h2>Random Rambilngs</h2>
+            <p>Edited 22/07/2021</p>
+          </div>
+          <div class="note-item">
+            <h2>Random Rambilngs</h2>
+            <p>Edited 22/07/2021</p>
+          </div>
+          <div class="note-item">
+            <h2>Random Rambilngs</h2>
+            <p>Edited 22/07/2021</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="navbar-body">
     <h1>BookBeater</h1>
     <div class="jcc alc f-row add-dashboard">
@@ -45,7 +87,18 @@
       <div class="container-fluid p-0 m-0 dash-cont">
         <div class="navigator">
           <div class="f-row alc">
-            <h3>Psychology Dashboard <span><i id="nav-drop" class="fas fa-caret-down"></i></span></h3>
+            <div class="dashboard-selector"> 
+              <div class="dropdown dd">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span><i class="fas fa-brain"></i></span>Psychology Dashboard
+                </button>
+                <div class="dropdown-menu ddm" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item ddi" href="#">Philosophy</a>
+                  <a class="dropdown-item ddi" href="#">Computers</a>
+                  <a class="dropdown-item ddi" href="#">Business</a>
+                </div>
+              </div>
+            </div>
             <button class="nav-create">Create +</button>
           </div>
         </div>
@@ -67,7 +120,29 @@
                     <p class="book-item-authors">Dr Cialdini</p> 
                     <p class="publishYear">1983</p>             
                 </div>
-                <button class="bookshelf-button">+</button>
+                <button class="bookshelf-button"><span>+</span></button>
+              </div>
+              <div class="book-item-container">
+                <div class="book-img-container">
+                    <img class="book-item-image" src="./images/book.jpg"/>
+                </div>
+                <div class="book-item-text">
+                    <p class="book-item-title">Psxycholgy of perusuasion </p>
+                    <p class="book-item-authors">Dr Cialdini</p> 
+                    <p class="publishYear">1983</p>             
+                </div>
+                <button class="bookshelf-button"><span>+</span></button>
+              </div>
+              <div class="book-item-container">
+                <div class="book-img-container">
+                    <img class="book-item-image" src="./images/book.jpg"/>
+                </div>
+                <div class="book-item-text">
+                    <p class="book-item-title">Psxycholgy of perusuasion </p>
+                    <p class="book-item-authors">Dr Cialdini</p> 
+                    <p class="publishYear">1983</p>             
+                </div>
+                <button class="bookshelf-button"><span>+</span></button>
     
               </div>
             </div>
@@ -79,7 +154,79 @@
                 <h2>Psychology Bookshelf <span class="notes-pseudo purp"></span> <span><i class="ml-4 fas fa-book"></i></span></h2>
                 <p class="edit-mode">Edit mode</p>
               </div>
-              <div class="dashboard-item-scroll bs-grid">
+              <div class="dashboard-item-half-scroll bs-grid">
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
+                <div class="bs-item">
+                  <img class="bs-item-image" src="./images/book.jpg"/>
+                  <div class="bs-info">
+                      <p class="bs-item-title">Influence: The psychology of pursuasion</p>
+                      <div class="sm-seperator"></div>
+                      <p class="bs-author">Dr Cialdini</p>
+                  </div>
+                </div>
                 <div class="bs-item">
                   <img class="bs-item-image" src="./images/book.jpg"/>
                   <div class="bs-info">
@@ -92,21 +239,55 @@
             </div>
             <div class="f-row">
               <div class="dash-item-half">
-                <h2>Your Notes<span class="ml-3"><i class="fas fa-sticky-note"></i></span><span class="notes-pseudo yellow"></span><span></span></h2>
-                <div class="dashboard-item-scroll">
+                <h2 class="mb-4">Your Notes<span class="ml-3"><i class="fas fa-sticky-note"></i></span><span class="notes-pseudo yellow"></span><span></span></h2>
+                <div class="dashboard-item-scroll notes-list">
                   <div class="note-item">
                     <p class="note-name">Note Name <span class="note-edited">Last edited 20/12/2021</span></p>
                     <p class="note-summ">This is a brief sumamry of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf</p>
                     <div class="f-row">
-                        <button class="note-but note-edit-button">Edit  <span><FontAwesomeIcon class="editPen" icon={faPen}/></span></button>
-                        <button class="note-but note-delete-button">Delete <span><FontAwesomeIcon class="deletePen" icon={faTimesCircle}/></span></button>
+                        <button class="note-but note-edit-button"><span class="note-but-text">Edit</span> <span><i class="note-icon fas fa-pencil-alt"></i></span></button>
+                        <button class="note-but note-delete-button"><span class="note-but-text">Delete</span><span><i class="note-icon fas fa-times"></i></span></button>
                     </div>
                   </div>
+                  <div class="note-item">
+                    <p class="note-name">Note Name <span class="note-edited">Last edited 20/12/2021</span></p>
+                    <p class="note-summ">This is a brief sumamry of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf</p>
+                    <div class="f-row">
+                        <button class="note-but note-edit-button"><span class="note-but-text">Edit</span> <span><i class="note-icon fas fa-pencil-alt"></i></span></button>
+                        <button class="note-but note-delete-button"><span class="note-but-text">Delete</span><span><i class="note-icon fas fa-times"></i></span></button>
+                    </div>
+                  </div>
+                  <div class="note-item">
+                    <p class="note-name">Note Name <span class="note-edited">Last edited 20/12/2021</span></p>
+                    <p class="note-summ">This is a brief sumamry of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf</p>
+                    <div class="f-row">
+                        <button class="note-but note-edit-button"><span class="note-but-text">Edit</span> <span><i class="note-icon fas fa-pencil-alt"></i></span></button>
+                        <button class="note-but note-delete-button"><span class="note-but-text">Delete</span><span><i class="note-icon fas fa-times"></i></span></button>
+                    </div>
+                  </div>
+                  <div class="note-item">
+                    <p class="note-name">Note Name <span class="note-edited">Last edited 20/12/2021</span></p>
+                    <p class="note-summ">This is a brief sumamry of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf of mos amosim oasm omaosmdf</p>
+                    <div class="f-row">
+                        <button class="note-but note-edit-button"><span class="note-but-text">Edit</span> <span><i class="note-icon fas fa-pencil-alt"></i></span></button>
+                        <button class="note-but note-delete-button"><span class="note-but-text">Delete</span><span><i class="note-icon fas fa-times"></i></span></button>
+                    </div>
+                  </div>
+
                 </div>
               </div>
               <div>
                 <div class="dash-item-half">
-                    
+                  <form class="note-edit" action="">
+                    <div class="note-inputs">
+                      <input type="text" class="note-title-input" placeholder="Note Title">
+                      <textarea name="" id="" cols="30" rows="10" class="note-content-input" placeholder="Note away all your noteness . . ."></textarea>
+                    </div>
+                    <div class="note-edit-buttons">
+                      <button class="add-button">Add reference</button>
+                      <button class="save-note"><i class="fas fa-check"></i></button>
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
