--- a/login.html
+++ b/login.html
@@ -8,14 +8,42 @@
   <meta charset="utf-8">
   <title>Promotion - Sharing animation tips for free!</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/styles.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/d96356a49f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    
-  
+  <div class="login-page">
+    <div class="login-left">
+      <section class="mx-auto my-auto">
+        <h3>Organize your Reading</h3>
+        <img src="" alt="">
+      </section>
+    </div>
+    <div class="login-right">
+        <form action="" name="reg-form" id="reg-form" class="acc-form" autocomplete="nope">
+          <h1>Register an Account</h3>
+          <div class="input-section">
+            <input autocomplete="nope" type="email" class="acc-field" id="email" placeholder=" " name="email">
+            <label for="email" class="login-label">Email</label>
+          </div>
+          <div class="input-section">
+            <input type="password" class="acc-field" id="password"  placeholder=" " name="password">  
+            <label for="password" class="login-label">Password</label>
+          </div>
+          <div class="input-section">
+            <input type="password" class="acc-field" id="conf-password"  placeholder=" " name="conf-password">  
+            <label for="conf-password" class="login-label">Confirm Password</label>
+          </div> 
+          <a href="">Forgot Password</a>
+          <button type="submit">Register</button>
+        </form>
+        <div class="logo">
+          <img src="images/BookerLogo.png" alt="">
+        </div>
+    </div>
+  </div>
 </body>
 
 </html>
