--- a/log_in.html
+++ b/log_in.html
@@ -17,13 +17,16 @@
   <div class="login-page">
     <div class="login-left">
       <section class="mx-auto my-auto">
-        <h3>Organize your Reading</h3>
-        <img src="" alt="">
+        <img src="./images//bookgiff.gif" alt="">
+        <h3>Organize your</h3>
+        <div class="long-btext-cont">
+          <h3 id="loginSpan" class="login-btext"></h3>
+        </div>
       </section>
     </div>
     <div class="login-right">
         <form action="" name="reg-form" id="reg-form" class="acc-form" autocomplete="nope">
-          <h1>Register an Account</h3>
+          <h1>Login</h3>
           <div class="input-section">
             <input autocomplete="nope" type="email" class="acc-field" id="email" placeholder=" " name="email">
             <label for="email" class="login-label">Email</label>
@@ -32,12 +35,8 @@
             <input type="password" class="acc-field" id="password"  placeholder=" " name="password">  
             <label for="password" class="login-label">Password</label>
           </div>
-          <div class="input-section">
-            <input type="password" class="acc-field" id="conf-password"  placeholder=" " name="conf-password">  
-            <label for="conf-password" class="login-label">Confirm Password</label>
-          </div> 
-          <a href="">Forgot Password</a>
-          <button type="submit">Register</button>
+          <button type="submit">Log in</button>
+          <a href="register.html">Need an account? Sign up for free here!</a>
         </form>
         <div class="logo">
           <img src="images/BookerLogo.png" alt="">
