Bookshelf Items Progress

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -43,11 +43,12 @@
         </ul>
         <a class="login" href="log_in.html"><span>Log out</span></a>
     </div>
-    <div class="container">
+    <div class="container-fluid" id='body'>
+      <div class="bookshelf-top-row">
         <h2>Bookshelf</h2>
         <div class="row">
             <input placeholder="Search for a book" type="text">
-            <button>Search</button>
+            <button class="search-button">Search</button>
         </div>
         <button>Create Custom Item</button>
         <div class="row">
@@ -70,20 +71,21 @@
                 </div>
             </div>
         </div>
+      </div>
         <div class="row">
             <div class="bookshelf-grid">
                 <div class="bookshelf-item-container">
                     <div class="book-item-front">
-                        <img src="./images/book.jpg" alt="">
+                        <img src="./images/71wdVdp0ncL.jpg" alt="">
                         <div class="front-info">
                             <h2>Book Title</h2>
                             <p>By Author name</p>
                         </div>
                     </div>
                     <div class="book-item-back">
-                        <div class="d-flex">
-                            <p class="notes-number">21 - </p>
-                            <p class="reading-time"> 00:32:23</p>
+                          <div class="book-stats">
+                            <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
+                            <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
                         </div>
                         <div class="d-flex book-buttons">
                             <button>View Book</button>
@@ -92,8 +94,66 @@
                     </div>
                     <div class="background"></div>
                 </div>
-           
-
+                <div class="bookshelf-item-container">
+                  <div class="book-item-front">
+                      <img src="./images/book.jpg" alt="">
+                      <div class="front-info">
+                          <h2>Book Title</h2>
+                          <p>By Author name</p>
+                      </div>
+                  </div>
+                  <div class="book-item-back">
+                      <div class="book-stats">
+                          <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
+                          <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
+                      </div>
+                      <div class="d-flex book-buttons">
+                          <button>View Book</button>
+                          <button>Study</button>
+                      </div>
+                  </div>
+                  <div class="background"></div>
+              </div>
+              <div class="bookshelf-item-container">
+                <div class="book-item-front">
+                    <img src="./images/5695.jpg" alt="">
+                    <div class="front-info">
+                        <h2>Book Title</h2>
+                        <p>By Author name</p>
+                    </div>
+                </div>
+                <div class="book-item-back">
+                    <div class="book-stats">
+                        <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
+                        <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
+                    </div>
+                    <div class="d-flex book-buttons">
+                        <button>View Book</button>
+                        <button>Study</button>
+                    </div>
+                </div>
+                <div class="background"></div>
+              </div>
+              <div class="bookshelf-item-container">
+                <div class="book-item-front">
+                    <img src="./images/5695.jpg" alt="">
+                    <div class="front-info">
+                        <h2>Book Title</h2>
+                        <p>By Author name</p>
+                    </div>
+                </div>
+                <div class="book-item-back">
+                    <div class="book-stats">
+                        <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
+                        <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
+                    </div>
+                    <div class="d-flex book-buttons">
+                        <button>View Book</button>
+                        <button>Study</button>
+                    </div>
+                </div>
+                <div class="background"></div>
+            </div>
             </div>
         </div>
     </div>
