--- a/bookshelf.html
+++ b/bookshelf.html
@@ -1,57 +1,73 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+      integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/scripts-vendor.min.js"></script>
+    <script src="./js/scripts.min.js"></script>
+    <meta charset="utf-8" />
+    <title>Promotion - Sharing animation tips for free!</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/d96356a49f.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="./js/scripts-vendor.min.js"></script>
-  <script src="./js/scripts.min.js"></script>
-  <meta charset="utf-8">
-  <title>Promotion - Sharing animation tips for free!</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/styles.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/d96356a49f.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <div class="navbar-body">
-        <h1>BookBeater</h1>
-        <div class="jcc alc f-row add-dashboard">
-          <div class="plus-sign">
-            <i class="fas fa-plus-circle"></i>
-          </div>
-          <textarea placeholder="Add a new dashboard"></textarea>
+  <body>
+    <nav class="navbar-body">
+      <h1>BookBeater</h1>
+      <div class="jcc alc f-row add-dashboard">
+        <div class="plus-sign">
+          <i class="fas fa-plus-circle"></i>
         </div>
-        <ul class="mb-5">
-          <a href="">
-            <li class="active-dashboard"><span><i class="fas fa-brain"></i></span>Psychology</li>
-          </a>
-          <a href="">
-            <li class="inactive-dashboard"><span><i class="far fa-lightbulb"></i></span>Philosophy</li>
-          </a>
-          <a href="">
-            <li class="inactive-dashboard"><span><i class="fas fa-laptop"></i></span>Computers</li>
-          </a>
-          <a href="">
-            <li class="inactive-dashboard"><span><i class="fas fa-user-tie"></i></span>Business</li>
-          </a>
-        </ul>
-        <ul class="mb-5">
-          <a href="">
-            <li class="inactive-dashboard"><span><i class="fas fa-cog"></i></span> Settings</li>
-          </a>
-        </ul>
-        <a class="login" href="log_in.html"><span>Log out</span></a>
-    </div>
-    <div class="container-fluid" id='body'>
+        <textarea placeholder="Add a new dashboard"></textarea>
+      </div>
+      <ul class="mb-5">
+        <a href="">
+          <li class="active-dashboard">
+            <span><i class="fas fa-brain"></i></span>Psychology
+          </li>
+        </a>
+        <a href="">
+          <li class="inactive-dashboard">
+            <span><i class="far fa-lightbulb"></i></span>Philosophy
+          </li>
+        </a>
+        <a href="">
+          <li class="inactive-dashboard">
+            <span><i class="fas fa-laptop"></i></span>Computers
+          </li>
+        </a>
+        <a href="">
+          <li class="inactive-dashboard">
+            <span><i class="fas fa-user-tie"></i></span>Business
+          </li>
+        </a>
+      </ul>
+      <ul class="mb-5">
+        <a href="">
+          <li class="inactive-dashboard">
+            <span><i class="fas fa-cog"></i></span> Settings
+          </li>
+        </a>
+      </ul>
+      <a class="login" href="log_in.html"><span>Log out</span></a>
+    </nav>
+    <div class="container-fluid" id="body">
       <div class="bookshelf-top-row">
-        <h2>Bookshelf</h2>
-        <div class="row">
-            <input placeholder="Search for a book" type="text">
-            <button class="search-button">Search</button>
+        <h2>Your Bookshelf</h2>
+        <div class="row mb-4 search-bar">
+          <i class="fas fa-search"></i>
+          <input placeholder="Search for a book to add" type="text" />
         </div>
-        <button>Create Custom Item</button>
-        <div class="row">
+        <button class="green-button">Create Custom Item</button>
+        <!-- <div class="row">
             <div class="col-6">
                 <div class="d-flex bookshelf-display">
                     <h3>Display:</h3>
@@ -70,93 +86,180 @@
                     </select>
                 </div>
             </div>
+        </div> -->
+      </div>
+      <div class="row">
+        <div class="bookshelf-grid">
+          <div class="bookshelf-item-container">
+            <div class="book-item-front">
+              <img src="./images/71wdVdp0ncL.jpg" alt="" />
+              <div class="front-info">
+                <h2>Book Title</h2>
+                <p>By Author name</p>
+              </div>
+            </div>
+            <div class="book-item-back">
+              <div class="book-stats">
+                <p class="notes-number">
+                  <span><i class="fas fa-sticky-note"></i></span> 21 Notes
+                </p>
+                <p class="reading-time">
+                  <span><i class="fas fa-clock"></i></span> 00:32:23
+                </p>
+              </div>
+              <div class="d-flex book-buttons">
+                <button>View Book</button>
+                <button>Study</button>
+              </div>
+            </div>
+            <div class="background"></div>
+          </div>
+          <div class="bookshelf-item-container">
+            <div class="book-item-front">
+              <img src="./images/book.jpg" alt="" />
+              <div class="front-info">
+                <h2>Book Title</h2>
+                <p>By Author name</p>
+              </div>
+            </div>
+            <div class="book-item-back">
+              <div class="book-stats">
+                <p class="notes-number">
+                  <span><i class="fas fa-sticky-note"></i></span> 21 Notes
+                </p>
+                <p class="reading-time">
+                  <span><i class="fas fa-clock"></i></span> 00:32:23
+                </p>
+              </div>
+              <div class="d-flex book-buttons">
+                <button>View Book</button>
+                <button>Study</button>
+              </div>
+            </div>
+            <div class="background"></div>
+          </div>
+          <div class="bookshelf-item-container">
+            <div class="book-item-front">
+              <img src="./images/5695.jpg" alt="" />
+              <div class="front-info">
+                <h2>Book Title</h2>
+                <p>By Author name</p>
+              </div>
+            </div>
+            <div class="book-item-back">
+              <div class="book-stats">
+                <p class="notes-number">
+                  <span><i class="fas fa-sticky-note"></i></span> 21 Notes
+                </p>
+                <p class="reading-time">
+                  <span><i class="fas fa-clock"></i></span> 00:32:23
+                </p>
+              </div>
+              <div class="d-flex book-buttons">
+                <button>View Book</button>
+                <button>Study</button>
+              </div>
+            </div>
+            <div class="background"></div>
+          </div>
+          <div class="bookshelf-item-container">
+            <div class="book-item-front">
+              <img src="./images/5695.jpg" alt="" />
+              <div class="front-info">
+                <h2>Book Title</h2>
+                <p>By Author name</p>
+              </div>
+            </div>
+            <div class="book-item-back">
+              <div class="book-stats">
+                <p class="notes-number">
+                  <span><i class="fas fa-sticky-note"></i></span> 21 Notes
+                </p>
+                <p class="reading-time">
+                  <span><i class="fas fa-clock"></i></span> 00:32:23
+                </p>
+              </div>
+              <div class="d-flex book-buttons">
+                <button>View Book</button>
+                <button>Study</button>
+              </div>
+            </div>
+            <div class="background"></div>
+          </div>
+          <div class="bookshelf-item-container">
+            <div class="book-item-front">
+              <img src="./images/5695.jpg" alt="" />
+              <div class="front-info">
+                <h2>Book Title</h2>
+                <p>By Author name</p>
+              </div>
+            </div>
+            <div class="book-item-back">
+              <div class="book-stats">
+                <p class="notes-number">
+                  <span><i class="fas fa-sticky-note"></i></span> 21 Notes
+                </p>
+                <p class="reading-time">
+                  <span><i class="fas fa-clock"></i></span> 00:32:23
+                </p>
+              </div>
+              <div class="d-flex book-buttons">
+                <button>View Book</button>
+                <button>Study</button>
+              </div>
+            </div>
+            <div class="background"></div>
+          </div>
+          <div class="bookshelf-item-container">
+            <div class="book-item-front">
+              <img src="./images/5695.jpg" alt="" />
+              <div class="front-info">
+                <h2>Book Title</h2>
+                <p>By Author name</p>
+              </div>
+            </div>
+            <div class="book-item-back">
+              <div class="book-stats">
+                <p class="notes-number">
+                  <span><i class="fas fa-sticky-note"></i></span> 21 Notes
+                </p>
+                <p class="reading-time">
+                  <span><i class="fas fa-clock"></i></span> 00:32:23
+                </p>
+              </div>
+              <div class="d-flex book-buttons">
+                <button>View Book</button>
+                <button>Study</button>
+              </div>
+            </div>
+            <div class="background"></div>
+          </div>
+          <div class="bookshelf-item-container">
+            <div class="book-item-front">
+              <img src="./images/5695.jpg" alt="" />
+              <div class="front-info">
+                <h2>Book Title</h2>
+                <p>By Author name</p>
+              </div>
+            </div>
+            <div class="book-item-back">
+              <div class="book-stats">
+                <p class="notes-number">
+                  <span><i class="fas fa-sticky-note"></i></span> 21 Notes
+                </p>
+                <p class="reading-time">
+                  <span><i class="fas fa-clock"></i></span> 00:32:23
+                </p>
+              </div>
+              <div class="d-flex book-buttons">
+                <button>View Book</button>
+                <button>Study</button>
+              </div>
+            </div>
+            <div class="background"></div>
+          </div>
         </div>
       </div>
-        <div class="row">
-            <div class="bookshelf-grid">
-                <div class="bookshelf-item-container">
-                    <div class="book-item-front">
-                        <img src="./images/71wdVdp0ncL.jpg" alt="">
-                        <div class="front-info">
-                            <h2>Book Title</h2>
-                            <p>By Author name</p>
-                        </div>
-                    </div>
-                    <div class="book-item-back">
-                          <div class="book-stats">
-                            <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
-                            <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
-                        </div>
-                        <div class="d-flex book-buttons">
-                            <button>View Book</button>
-                            <button>Study</button>
-                        </div>
-                    </div>
-                    <div class="background"></div>
-                </div>
-                <div class="bookshelf-item-container">
-                  <div class="book-item-front">
-                      <img src="./images/book.jpg" alt="">
-                      <div class="front-info">
-                          <h2>Book Title</h2>
-                          <p>By Author name</p>
-                      </div>
-                  </div>
-                  <div class="book-item-back">
-                      <div class="book-stats">
-                          <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
-                          <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
-                      </div>
-                      <div class="d-flex book-buttons">
-                          <button>View Book</button>
-                          <button>Study</button>
-                      </div>
-                  </div>
-                  <div class="background"></div>
-              </div>
-              <div class="bookshelf-item-container">
-                <div class="book-item-front">
-                    <img src="./images/5695.jpg" alt="">
-                    <div class="front-info">
-                        <h2>Book Title</h2>
-                        <p>By Author name</p>
-                    </div>
-                </div>
-                <div class="book-item-back">
-                    <div class="book-stats">
-                        <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
-                        <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
-                    </div>
-                    <div class="d-flex book-buttons">
-                        <button>View Book</button>
-                        <button>Study</button>
-                    </div>
-                </div>
-                <div class="background"></div>
-              </div>
-              <div class="bookshelf-item-container">
-                <div class="book-item-front">
-                    <img src="./images/5695.jpg" alt="">
-                    <div class="front-info">
-                        <h2>Book Title</h2>
-                        <p>By Author name</p>
-                    </div>
-                </div>
-                <div class="book-item-back">
-                    <div class="book-stats">
-                        <p class="notes-number"><span><i class="fas fa-sticky-note"></i></span> 21 Notes</p>
-                        <p class="reading-time"><span><i class="fas fa-clock"></i></span> 00:32:23</p>
-                    </div>
-                    <div class="d-flex book-buttons">
-                        <button>View Book</button>
-                        <button>Study</button>
-                    </div>
-                </div>
-                <div class="background"></div>
-            </div>
-            </div>
-        </div>
     </div>
-</body>
-
+  </body>
 </html>
